Create property, added file upload Not yet advanced Added a create link on SignedIn links added it's router on App.js Trying to style form. not yet successful To be completed on gold-plating branch

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+input .file-upload {
+  position: fixed;
+  top: -1000px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
