--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
   margin: 0;
+  padding: 0;
+  background: url(./images/smoke-bg.jpg) no-repeat;
+  background-size: 100%;
+  background-position: bottom;
+  background-color: white; /* linear-gradient(to bottom right, green, white) */
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,9 +13,33 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-input .file-upload {
+/*input .file-upload {
   position: fixed;
   top: -1000px;
+}*/
+
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button, form h5{
+  margin: 20px 0;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: #ec407a;
+  box-shadow: none;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label,
+input[type=email]:not(.browser-default):focus:not([readonly]) + label,
+input[type=password]:not(.browser-default):focus:not([readonly]) + label{
+  color: #ec407a !important;
 }
 
 code {
