--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(./images/smoke-bg.jpg) no-repeat;
+  background: url(./images/bg.jpg) no-repeat bottom;
   background-size: 100%;
   background-position: bottom;
-  background-color: white; /* linear-gradient(to bottom right, green, white) */
+  background-color: #1E4353; /* linear-gradient(to bottom right, green, white) */
   min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,10 +13,269 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/*input .file-upload {
-  position: fixed;
-  top: -1000px;
-}*/
+/*
+ ****************************************************************************************
+ * profile details css
+ */
+.profile-page{
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.profile-page {
+  /* height: 100vh; */
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-card{
+  width: 400px;
+  text-align: center;
+  border-radius: 8px;
+  /* overflow: hidden; */
+}
+
+.card-header{
+  background: #2c3a47;
+  padding: 60px 40px;
+}
+
+.pic{
+  align-content: center;
+  display: inline-block;
+  padding: 8px;
+  background: linear-gradient(130deg, #74b9ff, #e66767);
+  /* margin: auto; */
+  border-radius: 50%;
+  background-size: 200% 200%;
+  animation: animated-gradient 2s linear infinite;
+}
+.pic{
+  height: 200px;
+  width: 200px;
+  position: relative;
+  /* display: inline; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%,-50%); */
+  overflow: hidden;
+}
+
+.image-content {
+  display: inline-block;
+  align-content: center;
+}
+.image-content img{
+  /* width: 100%; */
+  height: 200px;
+  display: inline-block;
+}
+.uploadBtn {
+  text-align: center;
+  background: rgba(0, 0, 0, 0.85);
+  color: wheat;
+  font-family: sans-serif;
+  font-size: 15px;
+  cursor: pointer;
+  height: 200px;
+  width: 150px;
+  position: absolute;
+  padding-top: 90px;
+  display: inline-block;
+}
+
+@keyframes animated-gradient{
+  25%{
+    background-position: left bottom;
+  }
+  50%{
+    background-position: right bottom;
+  }
+  75%{
+    background-position: right top;
+  }
+  100%{
+    background-position: left top;
+  }
+}
+
+.pic img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.pic #uploadBtn {
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  /* position: sticky; */
+  /* bottom: 0; */
+  z-index: 9;
+  /* left: -50%; */
+  top: 0;
+  /* transform: translateX(60px); */
+  transform: translateY(155px);
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  color: wheat;
+  line-height: 30px;
+  font-family: sans-serif;
+  font-size: 15px;
+  cursor: pointer;
+  display: none;
+}
+.pic:hover #uploadBtn {
+  display: block;
+}
+
+.name{
+  color: #f2f2f2;
+  font-size: 28px;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+.desc{
+  font-size: 18px;
+  color: #e66767;
+}
+
+.sm{
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.sm a{
+  color: #f2f2f2;
+  width: 56px;
+  font-size: 22px;
+  transition: .3s linear;
+}
+
+.sm a:hover{
+  color: #e66767;
+}
+
+.contact-btn{
+  display: inline-block;
+  padding: 12px 50px;
+  color: #e66767;
+  border: 2px solid #e66767;
+  border-radius: 6px;
+  margin-top: 16px;
+  transition: .3s linear;
+}
+
+.contact-btn:hover{
+  background: #e66767;
+  color: #f2f2f2;
+}
+
+.card-footer{
+  background: #f4f4f4;
+  padding: 60px 10px;
+}
+
+.numbers{
+  display: flex;
+  align-items: center;
+}
+
+.item{
+  flex: 1;
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #e66767;
+}
+
+.item span{
+  display: block;
+  color: #2c3a47;
+  font-size: 30px;
+}
+
+.border{
+  width: 1px;
+  height: 30px;
+  background: #bbb;
+}
+
+/*
+ * profile details css
+ ****************************************************************************************
+*/
+
+.summary-image{
+  width: 100%;
+}
+
+/* 
+ slide images
+ ----------------------------
+*/
+section {
+  height: 100vh;
+  display: flex;
+  background: #ededed;
+  font-family: "Roboto", sans-serif;
+}
+
+.room-gallery {
+  width: 50%;
+  /* display: flex; */
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+}
+
+.room-description {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e2d2c0;
+  color: rgb(41, 41, 41);
+}
+.room-description h1 {
+  padding: 10px;
+  font-size: 40px;
+}
+.room-description p {
+  font-size: 20px;
+}
+
+.gallery-hightlight {
+  width: 100%;
+  height: 100%;
+  margin-left: 10%;
+}
+
+.room-preview {
+  display: flex;
+  width: 80%;
+  border: 2px solid #d3baa0;
+}
+.room-preview img {
+  flex-grow: 1;
+  height: 100px;
+  opacity: 0.5;
+  transition: opacity 0.4s ease;
+  cursor: pointer;
+}
+
+img.room-active {
+  opacity: 1;
+}
+/* 
+-----------------------------
+slide
+*/
 
 form{
   padding: 20px;
